<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>at.dccs.tuzla</groupId>
  <artifactId>app</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>RestApp</name>
  <description>Example REST App</description>

  <url>http://maven.apache.org</url>

  <properties>
    <tomee.version>8.0.9</tomee.version>
    <javaee-api.version>8.0.1</javaee-api.version>
    <openjpa.version>3.2.0</openjpa.version>
    <jaxrs-jackson.version>2.13.1</jaxrs-jackson.version>

    <junit4.version>4.13.2</junit4.version>
    <postgresql-jdbc.version>42.3.1</postgresql-jdbc.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <metamodel.source.path>${project.build.directory}/generated-sources/meta-model</metamodel.source.path>

    <jdbc.groupId>org.postgresql</jdbc.groupId>
    <jdbc.artifactId>postgresql</jdbc.artifactId>
    <jdbc.version>${postgresql-jdbc.version}</jdbc.version>
    <jdbc.driver>org.postgresql.Driver</jdbc.driver>
    <jdbc.dictionary>postgres(DisableAlterSeqenceIncrementBy=true)</jdbc.dictionary>

    <datasource.jndi>dccsJta</datasource.jndi>

    <jdbc.url>jdbc:postgresql://localhost:5432/dccs</jdbc.url>
    <!-- <jdbc.url>jdbc:mysql://localhost:3306/dccs</jdbc.url> -->
    <jdbc.userName>dccs</jdbc.userName>
    <jdbc.password>dccs</jdbc.password>

    <tomee.jdbc.driver>${jdbc.groupId}:${jdbc.artifactId}:${jdbc.version}</tomee.jdbc.driver>
  </properties>

  <dependencies>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.openjpa</groupId>
      <artifactId>openjpa</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-parameter-names</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.jaxrs</groupId>
      <artifactId>jackson-jaxrs-json-provider</artifactId>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.openjpa</groupId>
        <artifactId>openjpa</artifactId>
        <version>${openjpa.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-api</artifactId>
        <version>${javaee-api.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.module</groupId>
        <artifactId>jackson-module-parameter-names</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.fasterxml.jackson.jaxrs</groupId>
        <artifactId>jackson-jaxrs-json-provider</artifactId>
        <version>${jaxrs-jackson.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit4.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.9.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.2</version>
        <configuration>
          <warSourceExcludes>js/**</warSourceExcludes>
          <warSourceExcludes>tsx/**</warSourceExcludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.tomee.maven</groupId>
        <artifactId>tomee-maven-plugin</artifactId>
        <version>${tomee.version}</version>
        <configuration>
          <args>-Xmx768m -XX:MaxPermSize=384m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</args>

          <tomeeVersion>${tomee.version}</tomeeVersion>
          <tomeeClassifier>plus</tomeeClassifier>

          <context>ROOT</context>
          <debugPort>5005</debugPort>
          <tomeeShutdownPort>8007</tomeeShutdownPort>
          <reloadOnUpdate>true</reloadOnUpdate>
          <tomeeHttpPort>8080</tomeeHttpPort>
          <debug>false</debug>
          <stripVersion>true</stripVersion>
          <config>${project.build.directory}/apache-tomee-cfg</config>

          <systemVariables>
            <user.language>en</user.language>
            <user.region>US</user.region>
            <user.country>US</user.country>
          </systemVariables>

          <libs>
            <lib>${tomee.jdbc.driver}</lib>

            <lib>com.fasterxml.jackson.core:jackson-core:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.core:jackson-databind:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.core:jackson-annotations:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.jaxrs:jackson-jaxrs-base:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.module:jackson-module-jaxb-annotations:${jaxrs-jackson.version}</lib>
            <lib>com.fasterxml.jackson.module:jackson-module-parameter-names:${jaxrs-jackson.version}</lib>
          </libs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>src/main/java/</source>
                <source>${metamodel.source.path}</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.coveo</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.13</version>
        <executions>
          <execution>
            <id>google-format</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>format</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <id>copyPersistenceXml</id>
            <phase>process-classes</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
              <resources>
                <resource>
                  <filtering>true</filtering>
                  <directory>src/main/resources/META-INF</directory>
                  <includes>
                    <include>persistence.xml</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>

          <execution>
            <id>copyTomeeConfig</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/apache-tomee-cfg</outputDirectory>
              <resources>
                <resource>
                  <directory>src/main/tomee/conf</directory>
                  <filtering>true</filtering>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.bsc.maven</groupId>
        <artifactId>maven-processor-plugin</artifactId>
        <version>4.5</version>
        <executions>
          <execution>
            <id>process</id>
            <goals>
              <goal>process</goal>
            </goals>
            <phase>generate-sources</phase>
            <configuration>
              <outputDirectory>${metamodel.source.path}</outputDirectory>
              <processors>
                <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
              </processors>
            </configuration>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>org.hibernate</groupId>
              <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.6.3.Final</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>hsql</id>
      <properties>
        <jdbc.groupId>org.hsqldb</jdbc.groupId>
        <jdbc.artifactId>hsqldb</jdbc.artifactId>
        <jdbc.version>2.6.1</jdbc.version>

        <jdbc.url>jdbc:hsqldb:file:${project.basedir}/hsqldb/db;shutdown=true</jdbc.url>
        <jdbc.userName>sa</jdbc.userName>
        <jdbc.password>sa</jdbc.password>
        <jdbc.driver>org.hsqldb.jdbc.JDBCDriver</jdbc.driver>
        <jdbc.dictionary>hsql(SimulateLocking=true)</jdbc.dictionary>
      </properties>
    </profile>
  </profiles>
</project>
